# embedded-font-maker

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: app.rs  font.rs  main.rs
